--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "markdown-it-anchor": "^5.2.5"
   },
   "dependencies": {
-    "eleventy-plugin-sass": "^1.1.1"
+    "eleventy-plugin-sass": "^1.1.1",
+    "reset-css": "^5.0.1"
   }
 }
