--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "eleventy",
     "watch": "eleventy --watch",
-    "serve": "eleventy --serve",
+    "serve:webpack": "webpack --mode development --watch",
+    "serve:eleventy": "eleventy --serve",
     "start": "eleventy --serve",
     "debug": "DEBUG=* eleventy"
   },
@@ -30,10 +31,15 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
-    "markdown-it-anchor": "^5.2.5"
+    "markdown-it-anchor": "^5.2.5",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "webpack": "^5.3.0",
+    "webpack-cli": "^4.1.0"
   },
   "dependencies": {
     "eleventy-plugin-sass": "^1.1.1",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "typed.js": "^2.0.11"
   }
 }
