--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "serve:webpack": "webpack --mode development --watch",
     "serve:eleventy": "eleventy --serve",
     "start": "eleventy --serve",
-    "debug": "DEBUG=* eleventy"
+    "debug": "DEBUG=* eleventy",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d _site"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "gh-pages": "^3.1.0",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
